--- a/contacto.html
+++ b/contacto.html
@@ -15,8 +15,10 @@
 
     <header>
         <h1>Z4X, el robot</h1>
-        <nav>
-            <ul>
+        <button class="abrir-menu" id="abrir">Abrir</button>
+        <nav class="nav" id="nav">
+            <button class="cerrar-menu" id="cerrar">Cerrar</button>
+            <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="misiones.html">Misiones</a></li>
                 <li><a href="audiovisuales.html">Audiovisuales</a></li>
@@ -58,7 +60,7 @@
         <p>Derechos reservados &copy; 2023</p>
     </footer>
 
-
+<script src="scripts/hamburguesa.js"></script>
 </body>
 
 </html>
