--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
     <header>
         <h1>Z4X, el robot</h1>
-        <nav>
-            <ul>
+        <button class="abrir-menu" id="abrir"><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/menu-squared-2.png" alt="menu-squared-2"/></button>
+        <nav class="nav" id="nav">
+            <button class="cerrar-menu" id="cerrar"><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/close-window.png" alt="close-window"/></button>
+            <ul class="nav-list">
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="misiones.html">Misiones</a></li>
                 <li><a href="audiovisuales.html">Audiovisuales</a></li>
@@ -60,7 +62,7 @@
         <p>Derechos reservados &copy; 2023</p>
     </footer>
 
-
+<script src="/scripts/hamburguesa.js"></script>
 </body>
 
 </html>
